fix : loading page now correctly awaits download of all bundled resources before mounting vue app

--- a/src/ui/app/admin/admin.ejs
+++ b/src/ui/app/admin/admin.ejs
@@ -9,15 +9,18 @@
 </head>
 
 <body>
+    <link href="/mount.css" rel="stylesheet">
     <!-- pre-load animation or text element -->
     <div class="loader-wrapper">
-        <div class="loader"></div>
-        <div class="loader-status" style="display:none">
-            Loading
-            <div class="loader-progress"></div>
+        <div>
+            <div class="loader"></div>
+            <div class="loader-status" style="display:none">
+                <div class="loader-message">Downloading</div>
+                <div class="loader-progress"></div>
+            </div>
         </div>
     </div>
-    
+
     <!-- application bootstrapper code that triggers display of loader, then mounts application  -->
     <script type="text/javascript" src="/mount.js"></script>
 
@@ -30,6 +33,20 @@
             <area-footer></area-footer>
         </div>
     </div>
+
+    <script>
+        var assets = "<%=htmlWebpackPlugin.files.css%>,<%=htmlWebpackPlugin.files.js%>";
+        var onContentLoaded = function () {
+            var handle = window.setInterval(function () {
+                if (window.bootstrap !== undefined) {
+                    window.clearInterval(handle);
+                    assets = assets.split(',');
+                    window.bootstrap.loadAssets(assets);
+                }
+            }, 200)
+        }
+        document.addEventListener('DOMContentLoaded', onContentLoaded);
+    </script>
 </body>
 
 </html>
